--- a/Login/warehouse.ui
+++ b/Login/warehouse.ui
@@ -7,14 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>848</width>
-    <height>478</height>
+    <height>494</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <family>MS Shell Dlg 2</family>
-    <pointsize>12</pointsize>
-    <weight>9</weight>
+    <pointsize>14</pointsize>
+    <weight>50</weight>
     <italic>false</italic>
     <bold>false</bold>
    </font>
@@ -23,8 +23,7 @@
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(188, 213, 255, 18), stop:0.35 rgba(188, 204, 255, 80), stop:0.386364 rgba(162, 184, 255, 0), stop:0.425 rgba(132, 141, 255, 156), stop:0.44 rgba(128, 153, 252, 80), stop:1 rgba(255, 255, 255, 0));
-font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
+   <string notr="true"/>
   </property>
   <layout class="QFormLayout" name="formLayout_2">
    <item row="2" column="0">
@@ -35,9 +34,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
         <colorrole role="WindowText">
          <brush brushstyle="SolidPattern">
           <color alpha="255">
-           <red>219</red>
-           <green>237</green>
-           <blue>255</blue>
+           <red>0</red>
+           <green>0</green>
+           <blue>0</blue>
           </color>
          </brush>
         </colorrole>
@@ -190,9 +189,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
         <colorrole role="WindowText">
          <brush brushstyle="SolidPattern">
           <color alpha="255">
-           <red>219</red>
-           <green>237</green>
-           <blue>255</blue>
+           <red>0</red>
+           <green>0</green>
+           <blue>0</blue>
           </color>
          </brush>
         </colorrole>
@@ -501,8 +500,8 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
      <property name="font">
       <font>
        <family>MS Shell Dlg 2</family>
-       <pointsize>12</pointsize>
-       <weight>9</weight>
+       <pointsize>14</pointsize>
+       <weight>50</weight>
        <italic>false</italic>
        <bold>false</bold>
       </font>
@@ -519,9 +518,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
            <colorrole role="WindowText">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>219</red>
-              <green>237</green>
-              <blue>255</blue>
+              <red>0</red>
+              <green>0</green>
+              <blue>0</blue>
              </color>
             </brush>
            </colorrole>
@@ -674,9 +673,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
            <colorrole role="WindowText">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>219</red>
-              <green>237</green>
-              <blue>255</blue>
+              <red>0</red>
+              <green>0</green>
+              <blue>0</blue>
              </color>
             </brush>
            </colorrole>
@@ -985,8 +984,8 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
         <property name="font">
          <font>
           <family>MS Shell Dlg 2</family>
-          <pointsize>12</pointsize>
-          <weight>9</weight>
+          <pointsize>14</pointsize>
+          <weight>50</weight>
           <italic>false</italic>
           <bold>false</bold>
          </font>
@@ -1004,8 +1003,8 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
         <property name="font">
          <font>
           <family>MS Shell Dlg 2</family>
-          <pointsize>12</pointsize>
-          <weight>9</weight>
+          <pointsize>14</pointsize>
+          <weight>50</weight>
           <italic>false</italic>
           <bold>false</bold>
          </font>
@@ -1026,9 +1025,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
            <colorrole role="WindowText">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>219</red>
-              <green>237</green>
-              <blue>255</blue>
+              <red>0</red>
+              <green>0</green>
+              <blue>0</blue>
              </color>
             </brush>
            </colorrole>
@@ -1181,9 +1180,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
            <colorrole role="WindowText">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>219</red>
-              <green>237</green>
-              <blue>255</blue>
+              <red>0</red>
+              <green>0</green>
+              <blue>0</blue>
              </color>
             </brush>
            </colorrole>
@@ -1492,8 +1491,8 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
         <property name="font">
          <font>
           <family>MS Shell Dlg 2</family>
-          <pointsize>12</pointsize>
-          <weight>9</weight>
+          <pointsize>14</pointsize>
+          <weight>50</weight>
           <italic>false</italic>
           <bold>false</bold>
          </font>
@@ -1511,8 +1510,8 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
         <property name="font">
          <font>
           <family>MS Shell Dlg 2</family>
-          <pointsize>12</pointsize>
-          <weight>9</weight>
+          <pointsize>14</pointsize>
+          <weight>50</weight>
           <italic>false</italic>
           <bold>false</bold>
          </font>
@@ -1533,9 +1532,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
            <colorrole role="WindowText">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>219</red>
-              <green>237</green>
-              <blue>255</blue>
+              <red>0</red>
+              <green>0</green>
+              <blue>0</blue>
              </color>
             </brush>
            </colorrole>
@@ -1688,9 +1687,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
            <colorrole role="WindowText">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>219</red>
-              <green>237</green>
-              <blue>255</blue>
+              <red>0</red>
+              <green>0</green>
+              <blue>0</blue>
              </color>
             </brush>
            </colorrole>
@@ -2016,9 +2015,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
            <colorrole role="WindowText">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>219</red>
-              <green>237</green>
-              <blue>255</blue>
+              <red>0</red>
+              <green>0</green>
+              <blue>0</blue>
              </color>
             </brush>
            </colorrole>
@@ -2171,9 +2170,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
            <colorrole role="WindowText">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>219</red>
-              <green>237</green>
-              <blue>255</blue>
+              <red>0</red>
+              <green>0</green>
+              <blue>0</blue>
              </color>
             </brush>
            </colorrole>
@@ -2482,8 +2481,8 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
         <property name="font">
          <font>
           <family>MS Shell Dlg 2</family>
-          <pointsize>12</pointsize>
-          <weight>9</weight>
+          <pointsize>14</pointsize>
+          <weight>50</weight>
           <italic>false</italic>
           <bold>false</bold>
          </font>
@@ -2501,8 +2500,8 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
         <property name="font">
          <font>
           <family>MS Shell Dlg 2</family>
-          <pointsize>12</pointsize>
-          <weight>9</weight>
+          <pointsize>14</pointsize>
+          <weight>50</weight>
           <italic>false</italic>
           <bold>false</bold>
          </font>
@@ -2523,9 +2522,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
            <colorrole role="WindowText">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>219</red>
-              <green>237</green>
-              <blue>255</blue>
+              <red>0</red>
+              <green>0</green>
+              <blue>0</blue>
              </color>
             </brush>
            </colorrole>
@@ -2678,9 +2677,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
            <colorrole role="WindowText">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>219</red>
-              <green>237</green>
-              <blue>255</blue>
+              <red>0</red>
+              <green>0</green>
+              <blue>0</blue>
              </color>
             </brush>
            </colorrole>
@@ -2989,8 +2988,8 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
         <property name="font">
          <font>
           <family>MS Shell Dlg 2</family>
-          <pointsize>12</pointsize>
-          <weight>9</weight>
+          <pointsize>14</pointsize>
+          <weight>50</weight>
           <italic>false</italic>
           <bold>false</bold>
          </font>
@@ -3065,9 +3064,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
              <colorrole role="ButtonText">
               <brush brushstyle="SolidPattern">
                <color alpha="255">
-                <red>219</red>
-                <green>237</green>
-                <blue>255</blue>
+                <red>0</red>
+                <green>0</green>
+                <blue>0</blue>
                </color>
               </brush>
              </colorrole>
@@ -3220,9 +3219,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
              <colorrole role="ButtonText">
               <brush brushstyle="SolidPattern">
                <color alpha="255">
-                <red>219</red>
-                <green>237</green>
-                <blue>255</blue>
+                <red>0</red>
+                <green>0</green>
+                <blue>0</blue>
                </color>
               </brush>
              </colorrole>
@@ -3483,8 +3482,8 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
           <property name="font">
            <font>
             <family>MS Shell Dlg 2</family>
-            <pointsize>12</pointsize>
-            <weight>9</weight>
+            <pointsize>14</pointsize>
+            <weight>50</weight>
             <italic>false</italic>
             <bold>false</bold>
            </font>
@@ -3553,9 +3552,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
              <colorrole role="ButtonText">
               <brush brushstyle="SolidPattern">
                <color alpha="255">
-                <red>219</red>
-                <green>237</green>
-                <blue>255</blue>
+                <red>0</red>
+                <green>0</green>
+                <blue>0</blue>
                </color>
               </brush>
              </colorrole>
@@ -3708,9 +3707,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
              <colorrole role="ButtonText">
               <brush brushstyle="SolidPattern">
                <color alpha="255">
-                <red>219</red>
-                <green>237</green>
-                <blue>255</blue>
+                <red>0</red>
+                <green>0</green>
+                <blue>0</blue>
                </color>
               </brush>
              </colorrole>
@@ -3971,8 +3970,8 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
           <property name="font">
            <font>
             <family>MS Shell Dlg 2</family>
-            <pointsize>12</pointsize>
-            <weight>9</weight>
+            <pointsize>14</pointsize>
+            <weight>50</weight>
             <italic>false</italic>
             <bold>false</bold>
            </font>
@@ -4041,9 +4040,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
              <colorrole role="ButtonText">
               <brush brushstyle="SolidPattern">
                <color alpha="255">
-                <red>219</red>
-                <green>237</green>
-                <blue>255</blue>
+                <red>0</red>
+                <green>0</green>
+                <blue>0</blue>
                </color>
               </brush>
              </colorrole>
@@ -4196,9 +4195,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
              <colorrole role="ButtonText">
               <brush brushstyle="SolidPattern">
                <color alpha="255">
-                <red>219</red>
-                <green>237</green>
-                <blue>255</blue>
+                <red>0</red>
+                <green>0</green>
+                <blue>0</blue>
                </color>
               </brush>
              </colorrole>
@@ -4459,8 +4458,8 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
           <property name="font">
            <font>
             <family>MS Shell Dlg 2</family>
-            <pointsize>12</pointsize>
-            <weight>9</weight>
+            <pointsize>14</pointsize>
+            <weight>50</weight>
             <italic>false</italic>
             <bold>false</bold>
            </font>
@@ -4529,9 +4528,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
              <colorrole role="ButtonText">
               <brush brushstyle="SolidPattern">
                <color alpha="255">
-                <red>219</red>
-                <green>237</green>
-                <blue>255</blue>
+                <red>0</red>
+                <green>0</green>
+                <blue>0</blue>
                </color>
               </brush>
              </colorrole>
@@ -4684,9 +4683,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
              <colorrole role="ButtonText">
               <brush brushstyle="SolidPattern">
                <color alpha="255">
-                <red>219</red>
-                <green>237</green>
-                <blue>255</blue>
+                <red>0</red>
+                <green>0</green>
+                <blue>0</blue>
                </color>
               </brush>
              </colorrole>
@@ -4947,8 +4946,8 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
           <property name="font">
            <font>
             <family>MS Shell Dlg 2</family>
-            <pointsize>12</pointsize>
-            <weight>9</weight>
+            <pointsize>14</pointsize>
+            <weight>50</weight>
             <italic>false</italic>
             <bold>false</bold>
            </font>
@@ -5022,9 +5021,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
         <colorrole role="ButtonText">
          <brush brushstyle="SolidPattern">
           <color alpha="255">
-           <red>219</red>
-           <green>237</green>
-           <blue>255</blue>
+           <red>0</red>
+           <green>0</green>
+           <blue>0</blue>
           </color>
          </brush>
         </colorrole>
@@ -5186,9 +5185,9 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
         <colorrole role="ButtonText">
          <brush brushstyle="SolidPattern">
           <color alpha="255">
-           <red>219</red>
-           <green>237</green>
-           <blue>255</blue>
+           <red>0</red>
+           <green>0</green>
+           <blue>0</blue>
           </color>
          </brush>
         </colorrole>
@@ -5467,8 +5466,8 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
      <property name="font">
       <font>
        <family>MS Shell Dlg 2</family>
-       <pointsize>12</pointsize>
-       <weight>9</weight>
+       <pointsize>14</pointsize>
+       <weight>50</weight>
        <italic>false</italic>
        <bold>false</bold>
       </font>
